--- a/templates/gemba/pareto_details.html
+++ b/templates/gemba/pareto_details.html
@@ -77,6 +77,9 @@
         </tr>
         </tbody>
     </table>
+
+<div class = "row">
+<div class = "col">
     <table class="table table-hover">
         <thead>
         <tr>
@@ -101,7 +104,10 @@
             <td> </td>
         </tr>
         </tbody>
-    </table>
+        </table>
+</div>
+<div class = "col">
+
             <table class="table table-hover">
         <thead>
         <tr>
@@ -127,4 +133,6 @@
         </tr>
         </tbody>
     </table>
+    <div class = "col">
+</div>
 {% endblock %}
