--- a/templates/gemba/quarantine_view.html
+++ b/templates/gemba/quarantine_view.html
@@ -1,24 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
-<h4>Results:</h4>
-<p><a href="{% url 'gemba_app:scraps-view' %}">Go back</a></p>
+<h4>Quarantine View:</h4>
 <table class="table table-hover">
         <thead>
         <tr>
             <th scope="col">Date</th>
             <th scope="col">User / Line</th>
-            <th scope="col">Scrap Reason</th>
             <th scope="col">Qty</th>
             <th scope="col">Job</th>
             <th scope="col">Pareto ID</th>
         </tr>
         </thead>
         <tbody>
-        {% for object in object_list %}
+        {% for object in quarantine_qs %}
             <tr>
                 <td>{{ object.pareto_date }}</td>
                 <td>{{ object.user }}</td>
-                <td>{{ object.scrap }}</td>
                 <td>{{ object.qty }}</td>
                 <td>{{ object.job }}</td>
                 <td>{{ object.pareto_id }}</td>
@@ -26,5 +23,4 @@
             </tr>
         </tbody>
     </table>
-<p><a href="{% url 'gemba_app:export-scrap-csv' %}">Export search result</a></p>
 {% endblock %}
