Developing the Gemba app

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,8 +40,10 @@
           </li>
           {% endif %}
           </ul>
+          {% if user.is_authenticated %}
           <span class="navbar-nav"><a class="nav-item nav-link active" href="{% url 'gemba_app:pareto-summary' %}">
             Pareto Sheet</a></span>
+          {% endif %}
           {% if not request.user.is_authenticated %}
           <span class="navbar-nav">
             <a class="nav-item nav-link active" href="{% url 'accounts:register' %}">Register</a>
