--- a/templates/gemba/index.html
+++ b/templates/gemba/index.html
@@ -5,5 +5,6 @@
         <p><a href="{% url 'gemba_app:downtimes-view' %}">Downtimes View</a></p>
         <p><a href="{% url 'gemba_app:scraps-view' %}">Scrap View</a></p>
         <p><a href="{% url 'gemba_app:quarantine-view' %}">Quarantine View</a></p>
-        <a href="{% url 'homepage' %}"></a>
+
+        <p><a href="{% url 'gemba_app:tableau' %}">Tableau view</a></p>
 {% endblock %}
