--- a/templates/gemba/daily_oee_report.html
+++ b/templates/gemba/daily_oee_report.html
@@ -2,14 +2,15 @@
 {% block content %}
 {% load mathfilters %}
 
-<h4>Daily OEE Report</h4>
-
+<h4>Daily OEE Report - {{ request.GET.urlencode|cut:'q='}}</h4>
+<p><a href="{% url 'gemba_app:pareto-view' %}">Go back</a></p>
 <table class="table table-hover">
         <thead>
         <tr>
-            <th scope="col">Date</th>
+            <th scope="col">Pareto Id</th>
             <th scope="col">Line / User</th>
             <th scope="col">Shift</th>
+            <th scope="col">Job OTG/End</th>
             <th scope="col">Availability</th>
             <th scope="col">Performance</th>
             <th scope="col">Quality</th>
@@ -19,9 +20,10 @@
         <tbody>
         {% for item in object_list %}
         <tr>
-            <td><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.date|date:"d-m-Y" }}</a></td>
+            <td><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.id }}</a></td>
             <td>{{ item.user }}</td>
             <td>{{ item.shift }}</td>
+            <td>{% if item.job_otg is None %} ----- {% else %} {{ item.job_otg }} {% endif %}</td>
             <td>{{ item.availability }}%</td>
             <td>{{ item.performance }}%</td>
             <td>{{ item.quality }}%</td>
