--- a/templates/gemba/downtime_user_view.html
+++ b/templates/gemba/downtime_user_view.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 <h4>Downtime reasons:</h4>
+{% if pareto.job_otg is None or message_status == "Display" %}
+    <div class="alert alert-primary">
+    <strong>Info!</strong> You should <a href="{% url 'gemba_app:job-user-view' %}" class="alert-link">choose a job first!</a>
+    </div>
+{% endif %}
 <div>
     <p><a href="{% url 'gemba_app:pareto-ns-update-view' pk=pareto.pk %}">
-        Not scheduled to run - {{ pareto.not_scheduled_to_run }} min</a></p>
+        Not scheduled to run </a>- {{ pareto.not_scheduled_to_run }} min</p>
     <br/>
     <h6>General downtime reasons</h6>
     <table class="table">
