--- a/templates/gemba/pareto.html
+++ b/templates/gemba/pareto.html
@@ -18,14 +18,24 @@
     <a href="{% url 'gemba_app:pareto-update-view' pk=pareto_list.pk %}">
     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Update Pareto
     </button></a>
+    <a href="{% url 'gemba_app:job-user-view' %}">
+    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Select job
+    </button></a>
     <a href="{% url 'gemba_app:close-pareto' %}">
     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Close Pareto
     </button></a>
     {% endif %}
     </div>
     <br/>
-<h2 style="text-align:left;">PARETO  date: {{ pareto_list.pareto_date|date:"d-m-Y" }} <span style="float:right;">
-    Line: {{ user }}</span></h2>
+    {% if message_status == "Display" %}
+    <div class="alert alert-primary">
+    <strong>Info!</strong> You should <a href="{% url 'gemba_app:job-user-view' %}" class="alert-link">choose a job first!</a>
+    </div>
+    {% endif %}
+    <br/>
+<h2 style="text-align:left;">PARETO  Date: {{ pareto_list.pareto_date|date:"d-m-Y" }}
+    {% if pareto_list.job_otg is None %} Job: Please select! {% else %} Job: {{ pareto_list.job_otg }}{% endif %}
+    <span style="float:right;">Line: {{ user }}</span></h2>
     <p>Shift started: {{ pareto_list.time_stamp|time:"h:i a" }} - {{ pareto_list.shift }} - {{ pareto_list.hours }} hours -
         Operators: {{ pareto_list.ops }} - Time available until now: {{ available_time }} min - Not scheduled to run:
         {{ pareto_list.not_scheduled_to_run}} min</p>
@@ -108,8 +118,9 @@
         <thead>
         <tr>
             <th scope="col" width="50%">Downtime Reason</th>
-            <th scope="col" width="25%">Minutes</th>
-            <th scope="col" width="25%">Job</th>
+            <th scope="col" width="15%">Minutes</th>
+            <th scope="col" width="15%">Frequency</th>
+            <th scope="col" width="20%">Job</th>
         </tr>
         </thead>
         <tbody>
@@ -122,6 +133,7 @@
             <td><a href="{% url 'gemba_app:downtime-detail-view' pk=pareto_item.pk %}">
                 {{ pareto_item.downtime.code }} - {{ pareto_item.downtime.description }}</a></td>
             <td>{{ pareto_item.minutes }}</td>
+                 <td>{{ pareto_item.frequency }}</td>
                  <td>{{ pareto_item.job }}</td>
              </tr>
         {% endfor %}
