--- a/templates/gemba/pareto_view.html
+++ b/templates/gemba/pareto_view.html
@@ -13,6 +13,7 @@ Select a date
           <th scope="col">Date</th>
             <th scope="col">Line / User</th>
             <th scope="col">Shift</th>
+            <th scope="col">Job OTG/End</th>
             <th scope="col">Availability</th>
             <th scope="col">Performance</th>
             <th scope="col">Quality</th>
@@ -25,6 +26,7 @@ Select a date
             <td><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.date|date:"d-m-Y" }}</a></td>
             <td>{{ item.user }}</td>
             <td>{{ item.shift }}</td>
+            <td>{% if item.job_otg is None %} ----- {% else %} {{ item.job_otg }} {% endif %}</td>
             <td>{{ item.availability }}%</td>
             <td>{{ item.performance }}%</td>
             <td>{{ item.quality }}%</td>
