--- a/templates/tools/filter_list.html
+++ b/templates/tools/filter_list.html
@@ -6,9 +6,6 @@
     <div><a href="{% url 'tools_app:job-add-form' %}">
     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Add job
     </button></a>
-    <a href="{% url 'tools_app:job-add-barcode-form' %}">
-    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Add job (Barcode)
-    </button></a>
     </div>
   <br/>
   {% endif %}
@@ -41,7 +38,7 @@
   </form>
 
   <table class="table table-hover">
-    <thead class="alert-success">
+    <thead>
       <tr>
         <th>Date</th>
         <th>Job</th>
