Developing the Gemba app

--- a/templates/gemba/delete_downtime.html
+++ b/templates/gemba/delete_downtime.html
@@ -2,7 +2,7 @@
 {% block content %}
 <form method="post">
     {% csrf_token %}
-    <p>Do you really want to delete downtime reason: {{ object.downtime }} - {{ object.downtime.description }} for job {{ object.job }}</p>
+    <p>Do you really want to delete downtime reason: {{ object.downtime }} for job {{ object.job }}</p>
     <input type="submit" value="Delete">
 </form>
 {% endblock %}
