--- a/templates/gemba/scrap_user_view.html
+++ b/templates/gemba/scrap_user_view.html
@@ -35,6 +35,16 @@
     <td><a href="{% url 'gemba_app:scrap-detail-create' pk=item.scrap.pk %}">{{ item.scrap }}</a></td>
     {% endfor %}
     </tr>
+        <tr>
+    {% for item in general_list|slice:"16:20" %}
+    <td><a href="{% url 'gemba_app:scrap-detail-create' pk=item.scrap.pk %}">{{ item.scrap }}</a></td>
+    {% endfor %}
+    </tr>
+        <tr>
+    {% for item in general_list|slice:"21:25" %}
+    <td><a href="{% url 'gemba_app:scrap-detail-create' pk=item.scrap.pk %}">{{ item.scrap }}</a></td>
+    {% endfor %}
+    </tr>
         </tbody>
     </table>
 </div>
@@ -69,6 +79,21 @@
     </tr>
     <tr>
     {% for item in items_list|slice:"10:15" %}
+    <td><a href="{% url 'gemba_app:scrap-detail-create' pk=item.scrap.pk %}">{{ item.scrap }}</a></td>
+    {% endfor %}
+    </tr>
+        <tr>
+    {% for item in items_list|slice:"15:20" %}
+    <td><a href="{% url 'gemba_app:scrap-detail-create' pk=item.scrap.pk %}">{{ item.scrap }}</a></td>
+    {% endfor %}
+    </tr>
+        <tr>
+    {% for item in items_list|slice:"20:25" %}
+    <td><a href="{% url 'gemba_app:scrap-detail-create' pk=item.scrap.pk %}">{{ item.scrap }}</a></td>
+    {% endfor %}
+    </tr>
+        <tr>
+    {% for item in items_list|slice:"25:30" %}
     <td><a href="{% url 'gemba_app:scrap-detail-create' pk=item.scrap.pk %}">{{ item.scrap }}</a></td>
     {% endfor %}
     </tr>
