--- a/templates/gemba/pareto.html
+++ b/templates/gemba/pareto.html
@@ -36,7 +36,7 @@
 <h2 style="text-align:left;">PARETO  Date: {{ pareto_list.pareto_date|date:"d-m-Y" }}
     {% if pareto_list.job_otg is None %} Job: Please select! {% else %} Job: {{ pareto_list.job_otg }}{% endif %}
     <span style="float:right;">Line: {{ user }}</span></h2>
-    <p>Shift started: {{ pareto_list.time_stamp|time:"h:i a" }} - {{ pareto_list.shift }} - {{ pareto_list.hours }} hours -
+    <p>Shift started: {{ pareto_list.time_stamp|time:"h:i a" }} - {{ pareto_list.shift|slice:"4:" }} - {{ pareto_list.hours }} hours -
         Operators: {{ pareto_list.ops }} - Time available until now: {{ available_time }} min - Not scheduled to run:
         {{ pareto_list.not_scheduled_to_run}} min</p>
 
