--- a/templates/gemba/pareto.html
+++ b/templates/gemba/pareto.html
@@ -43,10 +43,12 @@
 <div>
     <div class = "row">
     <div class = "col">
+        {% regroup pareto_list.jobs.all by job as job_list %}
+        {% for job in job_list %}
         <table class="table table-hover">
         <thead>
         <tr>
-            <th scope="col">Job</th>
+            <th scope="col">{{ job.grouper }}</th>
             <th scope="col">Output</th>
             <th scope="col">Good</th>
             <th scope="col">Scrap</th>
@@ -60,7 +62,7 @@
               </tr>
         {% endif %}
         <tr>
-        {% for pareto_item in pareto_list.jobs.all %}
+        {% for pareto_item in job.list %}
             <td><a href="{% url 'gemba_app:pareto-details-view' pk=pareto_item.pk %}">
                 {{ pareto_item.job.name }}</a></td>
             <td>{{ pareto_item.qty }}</td>
@@ -78,6 +80,7 @@
         </tr>
         </tbody>
         </table>
+        {% endfor %}
     </div>
 
     <div class = "col">
