--- a/templates/tools/in_use.html
+++ b/templates/tools/in_use.html
@@ -15,7 +15,7 @@
                 <th>Tool</th>
                 <th>Tool Type</th>
                 <th>Start Date</th>
-                <th>Hours</th>
+                <th>Minutes</th>
             </tr>
             </thead>
             <tbody>
@@ -25,7 +25,7 @@
                     <td>{{ operation.tool }}</td>
                     <td>{{ operation.tool_type }}</td>
                     <td>{{ operation.start_date|date:"Y-m-d" }}</td>
-                    <td>{{ operation.hours }}</td>
+                    <td>{{ operation.minutes }}</td>
                     </tr>
                     {% endfor %}
             </tbody>
