--- a/templates/gemba/pareto_detail_view.html
+++ b/templates/gemba/pareto_detail_view.html
@@ -12,7 +12,7 @@
         <tbody>
             <tr>
                 <td>{{ object.job }}</td>
-                <td>{{ object.qty }}</td>
+                <td>{{ object.output }}</td>
                 <td>{{ object.good }}</td>
             </tr>
         </tbody>
