Table to display tools vs jobs

--- a/templates/tools/index.html
+++ b/templates/tools/index.html
@@ -3,5 +3,5 @@
         <p><a href="{% url 'tools_app:search-form' %}">Job Update</a></p>
         <p><a href="{% url 'tools_app:returning' %}">Tool change operations</a></p>
         <p><a href="{% url 'tools_app:in-use' %}">Tools in use</a></p>
-        <p><a href="{% url 'tools_app:tools_vs_jobs' %}">Tools vs Jobs</a></p>
+        <p><a href="{% url 'tools_app:machines' %}">Tools vs Jobs</a></p>
 {% endblock %}
