--- a/templates/tools/station.html
+++ b/templates/tools/station.html
@@ -12,7 +12,7 @@
         <tbody>
         {% for object in station_qs %}
             <tr>
-                <td><a href="{% url 'tools_app:select-tool' station_id=object.pk %}">{{ object.name }}</a></td>
+                <td><a href="{% url 'tools_app:select-tool' machine_id=object.machine_id station_id=object.pk %}">{{ object.name }}</a></td>
             </tr>
         {% endfor %}
         </tbody>
