--- a/templates/gemba/pareto_before_close.html
+++ b/templates/gemba/pareto_before_close.html
@@ -10,7 +10,7 @@
     <h4 style="text-align:left;">PARETO FINAL VERSION
     <span style="float:right;">Line: {{ user }}</span></h4>
 <p>Date: {{ pareto_list.pareto_date|date:"d-m-Y" }}</p>
-<p> {{ pareto_list.shift|slice:"4:" }} - {{ pareto_list.hours }} hours -
+<p> {{ pareto_list.shift }} - {{ pareto_list.hours }} hours -
     Operators: {{ pareto_list.ops }} - Available time: {{ available_time }} min - Not scheduled to run:
     {{ pareto_list.not_scheduled_to_run}} min</p>
 <p> Total Downtime: {{ downtime }} min </p>
